--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev -p 3030"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
+    "@react-email/components": "^0.0.12",
+    "@react-email/render": "^0.0.10",
     "@types/node": "20.10.3",
     "@types/react": "18.2.42",
     "@types/react-dom": "18.2.17",
@@ -19,6 +22,7 @@
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.3",
     "fast-sort": "^3.4.0",
+    "lodash": "^4.17.21",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "next-cloudinary": "^5.16.0",
@@ -26,12 +30,16 @@
     "prisma": "^5.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "^1.10.0",
+    "resend": "^1.0.0",
     "tailwindcss": "3.3.6",
     "typescript": "5.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.14.202",
+    "@react-email/render": "^0.0.10",
     "daisyui": "^4.4.23"
   }
 }
